resources/css/main.css
/* ... */
/* Tools Progress */
#vscode-prog {
    width: 90%;
}

#eclipse-prog {
    width: 70%;
}

#github-prog {
    width: 85%;
}

#netbeans-prog {
    width: 65%;
}

/* Portfolio Section */
#portfolio-title {
    position: relative;
    top: 900px;
    text-align: center;
}

#portfolio {
    display: flex;
    flex-direction: var(--flex-direct);
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    
    margin-left: auto;
    margin-right: auto;

    width: 1000px;

    position: relative;
    top: 1000px;
}

.portfolio-tile {
    background-color: var(--main-bg-color);

    width: 400px;
    height: auto;
    margin: 0 15px 30px;

    border: white 1px solid;

    text-align: center;
}

#wikipedia-viewer-img {
    height: 326px;
}

.portfolio-tile > a {
    text-decoration: none;
    color: white;
}

.portfolio-img {
    width: 100%;
    border-bottom: white 1px solid;
}

.portfolio-tile-title {
    height: 50px;
}

.portfolio-tile-title > h4 {
    margin-top: 15px;
}

/* Contact Section */
#contact-title {
    position: relative;
    top: 1300px;
    text-align: center;
}

#contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    position: relative;
    top: 1400px;
    padding-bottom: 300px;
}

#contact > a {
    color: white;
    font-weight: bold;
    margin-top: 75px;
    font-size: 22px;
}

.social-links {
    margin-top: 75px;
}

.social-links > a {
    margin: 0 30px;
}

.fa {
    color: white;
    font-size: 42px;

    /* Transition to 360 degree angle */
    -webkit-transition: transform 500ms ease-out;
    -moz-transition: transform 500ms ease-out;
    -o-transition: transform 500ms ease-out;
    transition: transform 500ms ease-out;
}

/* Rotate and change color of icon on hover */
.fa:hover {
    color: #0026ff;
    transform: rotate(360deg);
}

/* Footer */
footer {
    position: relative;
    top: 1300px;
    text-align: center;
}

